--- a/ElibraryManagement/Web.config
+++ b/ElibraryManagement/Web.config
@@ -1,11 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <connectionStrings>
-    <add name="conn" connectionString="Data Source=DOBESCH\SQLEXPRESS01;Initial Catalog=eLibraryDB;Integrated Security=true"/>
+    <add name="conn" connectionString="Data Source=DOBESCH\SQLEXPRESS01;Initial Catalog=eLibraryDB;Integrated Security=true" />
+    <add name="eLibraryDBConnectionString" connectionString="Data Source=DOBESCH\SQLEXPRESS01;Initial Catalog=eLibraryDB;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <system.web>
