--- a/ElibraryManagement/ElibraryManagement.csproj
+++ b/ElibraryManagement/ElibraryManagement.csproj
@@ -74,6 +74,11 @@
     <Content Include="adminlogin.aspx" />
     <Content Include="adminmembermanagement.aspx" />
     <Content Include="adminpublishermanagement.aspx" />
+    <Content Include="book_inventory\b1.jpg" />
+    <Content Include="book_inventory\b2.jpg" />
+    <Content Include="book_inventory\b3.jpg" />
+    <Content Include="book_inventory\b4.jpg" />
+    <Content Include="book_inventory\b5.jpg" />
     <Content Include="bootstrap\css\bootstrap.min.css" />
     <Content Include="bootstrap\js\bootstrap.min.js" />
     <Content Include="bootstrap\js\jquery.slim.min.js" />
@@ -2319,9 +2324,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="book_inventory\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
